[update] add support for java/odin projects